force-app/main/default/objects/API_Request_History__c/API_Request_History__c.object-meta.xml
<CustomObject>
    <label>API Request History</label>
    <nameField>
        <displayFormat>ARH-{00000}</displayFormat>
        <label>API Request History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Request Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>