force-app/main/default/objects/API_Request_History__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>