force-app/main/default/objects/API_Request_History__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>