force-app/main/default/objects/API_Request_History__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>150</length>
    <type>Text</type>
</CustomField>